Restructure maven build configurations.