@@ -122,68 +122,4 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>14</source>
-          <target>14</target>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-            <!--<arg>-proc:none</arg>-->
-          </compilerArgs>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
-          <generatedSourcesDirectory>
-            ${project.build.directory}/generated-sources/
-          </generatedSourcesDirectory>
-          <annotationProcessorPaths>
-            <!--<annotationProcessorPath>
-              <artifactId>AnnotationProcessors</artifactId>
-              <groupId>grevend</groupId>
-              <version>0.3.3-SNAPSHOT</version>
-            </annotationProcessorPath>-->
-          </annotationProcessorPaths>
-          <!--<annotationProcessors>
-            <annotationProcessor>
-              grevend.persistencelite.builder.EntityBuilderProcessor
-            </annotationProcessor>
-          </annotationProcessors>-->
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>3.8.2</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.0.0</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
-      </plugin>
-      <!--<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>-->
-    </plugins>
-  </build>
 </project>
